--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title></title>
   <meta charset="utf-8" />
@@ -8,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <script type="text/javascript" src="js/require.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script data-main="js/main.js" type="text/javascript" src="js/require.js"></script>
+	<script type="text/javascript" src="customActivity.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript">
     (function () {
       var config = {
