--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
 	<script data-main="js/main.js" type="text/javascript" src="js/require.js"></script>
-	<script type="text/javascript" src="customActivity.js"></script>
+	<script type="text/javascript" src="js/customActivity.js"></script>
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <script type="text/javascript">
     (function () {
