--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <form action="/person.php" method="post">
       <div class="form-group form-heading">
         <img src="logo.PNG" />
-        push activity
+        Configure Insider Mobile App Push
       </div>
       <div class="form-group">
         <label for="apikey">API Key</label>
